# dm21-jax

./: LICENSE  README.md  pyproject.toml
dm21_jax/: __init__.py  compute_hfx_density.py  convert_tf_to_eqx.py  model.py  neural_numint.py
dm21_jax/checkpoints/: DM21.eqx  DM21m.eqx  DM21mc.eqx  DM21mu.eqx
tests/: test_compute_hfx_density.py  test_neural_numint.py
